--- a/PKMN/PKMN/PKMN.csproj
+++ b/PKMN/PKMN/PKMN.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Autofac" Version="4.8.0" />
     <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.4.118" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
   </ItemGroup>
 
